! Fixed weSkeleton->find not returning false (and instead triggering an error) when a block/layer couldn't be found. This bug was introduced in rev 1175, which was a major rewrite, so I think I'm allowed room for forgiveness here. ;) (Class-Skeleton.php)
+ Added support for @viewport for browsers that support them (Opera 11+ and IE 10+). Although it doesn't look like much, it allows me to remove the meta viewport tag from all HTML pages in Opera Mobile and Windows 8. Best of all, skins can thus determine their favorite zoom levels. Okay, now we just need to wait for WebKit to add support for this... All right? It's underway... And it's taking time. Boo. (Class-CSS.php, index.template.php, Wireless/extra.css)

* Got rid of the .live (well, '.on' since the jQuery version change) calls to mini-menu items. The recent mini-menu rewrite was partly done to allow for event-driven JS to be put back into the 'click' array entry, and I forgot to do that for the two entries that called for the rewrite... Amusing. Also, note the double JSE call. It's needed because the string will be inserted between single quotes later. (Display.php)

* More bytes saved... About 10. And select box generation should be a tad faster, too. Well, I haven't benchmarked myself but... (script.js, sbox.js)

* Ah, yes, still needed to commit the index template's @viewport modification... (index.template.php)

--- a/Themes/default/skins/Wireless/extra.css
+++ b/Themes/default/skins/Wireless/extra.css
@@ -55,3 +55,8 @@
 	.poster
 		height: 75px
 @endif
+
+@viewport
+	width: device-width
+	min-zoom, zoom: .7 // minimum-scale and initial-scale
+	max-zoom: 2 // maximum-scale
